fixed the navbar horizontal overflow

--- a/program.css
+++ b/program.css
@@ -11,6 +11,8 @@ body::-webkit-scrollbar {
   display: none;
 }
 header {
+  display: flex;
+  align-items: center;
   position: relative;
   width: 100%;
   height: 100px;
